# RustMarketIndicatorCalculator

./: .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260120_194751_add_value_indicator_type.rs  m20260120_203238_symbol_id_unique_key.rs  m20260121_200731_remove_symbol_id_unique.rs  m20260121_203405_indicator_type.rs  m20260122_191658_add_interval_to_indicator.rs
migrations/: 20260112195211_0001_create_tables.down.sql  20260112195211_0001_create_tables.up.sql
src/: consts.rs  listener.rs  main.rs  structs.rs
src/core/: data.rs  logic.rs  mod.rs  trading.rs
src/entity/: exchanges.rs  indicators.rs  mod.rs  prelude.rs  symbols.rs
src/exchanges/: api_client.rs  mod.rs
src/exchanges/binance/: mod.rs  structs.rs
src/exchanges/bybit/: mod.rs  structs.rs
src/storage/: json.rs  mod.rs  storage_trait.rs
src/storage/sql/: mod.rs
src/trading/: listener.rs  logic.rs  mod.rs
