[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = {version = "1.49.0", features = ["full"]}
dotenvy = "0.15.7"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }

[workspace]
resolver = "3"
members = [
    ".",
    "migration"
]
